@@ -144,6 +144,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   result in a URL ending in "#Hello?" rather than "#Hello.3F".
 * (bug 8140) Add dedicated CSS classes to Special:Newpages elements
 * (bug 11005) Add CSS class to empty pages in Special:Newpages
+* The parser cache is now shared amongst users whose different settings aren't
+  used in the page.
 
 === Bug fixes in 1.17 ===
 * (bug 17560) Half-broken deletion moved image files to deletion archive
@@ -287,6 +289,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 15470) First letters of filenames are always capitalized by upload JS.
 * (bug 21215) NoLocalSettings.php doesn't tolerate rewrite rules
 * (bug 21052) Fix link color for stubs in NewPages
+* (bug 24714) Usage of {{#dateformat: }} in wikis without $wgUseDynamicDates no 
+  longer pollutes the parser cache.
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent.
